parser/test/corpus/arrays
=================================================
Arrays
=================================================

fn main() {
    bad: int[3]
    bad[5] = 10
  }

-------------------------------------------------

(source_file
  (function_definition_list
    (function_definition
      (identifier)
      (parameter_list)
      (block
        (statement_list
          (variable_declaration_statement
            (identifier)
            (array_type
              (single_value_type
                (identifier))
              (integer)))
          (array_assignment_statement
            (identifier)
            (integer)
            (integer)))))))
