parser/test/corpus/extern
=================================================
Extern
=================================================

extern fn print(i: int) -> void

fn main() {
  print(i: 10)
}

-------------------------------------------------

(source_file
  (external_function_declaration_list
    (external_function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (single_value_type
            (identifier))))
      (single_value_type
        (identifier))))
  (function_definition_list
    (function_definition
      (identifier)
      (parameter_list)
      (block
        (statement_list
          (function_call
            (identifier)
            (argument_list
              (argument
                (identifier)
                (integer)))))))))
