parser/test/corpus/identifiers
=================================================
Identifiers
=================================================

fn main() {
  a := 1;
  a_b := 2;
  a2b_c := 3;
}

-------------------------------------------------

(source_file
  (definition_list
    (function_definition
      (identifier)
      (parameter_list)
      (block
        (statement_list
          (variable_declaration_statement
            (identifier)
            (integer))
          (variable_declaration_statement
            (identifier)
            (integer))
          (variable_declaration_statement
            (identifier)
            (integer)))))))
