parser/test/corpus/statements
=================================================
Variable Declaration
=================================================

main : void = () {
  x := 1
  {
    x := 1
  }
}

-------------------------------------------------

(source_file
  (function_definition_list
    (function_definition
      (identifier)
      (single_value_type
        (identifier))
      (parameter_list)
      (block
        (statement_list
          (variable_declaration_statement
            (identifier)
            (integer))
          (block
            (statement_list
              (variable_declaration_statement
                (identifier)
                (integer)))))))))
